k8s/NetflixFrontend/deployment_green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-frontend-green
  labels:
    app: netflix-frontend-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netflix-frontend-green
  template:
    metadata:
      labels:
        app: netflix-frontend-green
    spec:
      containers:
        - name: server
          image: alonithuji/netflix-frontend:0.0.1
          volumeMounts:
            - name: nginx-configurations
              mountPath: /etc/nginx/conf.d/
      volumes:
        - name: nginx-configurations
          configMap:
            name: nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-frontend-service-green
spec:
  selector:
    app: netflix-frontend-green
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
