k8s/NetflixFrontend/ingress.yml
# k8s/ingress-demo.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-frontend
spec:
  ingressClassName: nginx
  rules:
    - host: grossman.qodok8s.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-frontend-service-green
                port:
                  number: 3000
